<!--
ABREVIATURAS
tv_ para TextView
et_ para EditText
btn_ para Button
cd_ para Content Description (Descripciones de accesibilidad).
-->

<resources>
    <!-- GLOBAL -->
    <string name="app_name">Mobile_club_deportivo</string>
    <string name="global_registrar">Registrar Cliente</string>
    <string name="global_cobro">Generar Cobro</string>
    <string name="global_gestionar">Gestionar</string>
    <string name="global_nombre_usuario">Nombre de Usuario</string>
    <string name="global_socio">Socio</string>
    <string name="global_no_socio">No Socio</string>
    <!-- Content Description -->
    <string name="global_cd_back">Volver atrás</string>
    <string name="global_cd_apt_fisico">Apto físico</string>
    <!-- PANTALLA LOGIN -->
    <string name="login_tv_bienvenida">Bienvenido a la app móvil del Club Deportivo</string>
    <string name="login_tv_usuario">Usuario</string>
    <string name="login_tv_clave">Contraseña</string>
    <string name="login_et_hint_usuario">Ingrese su usuario</string>
    <string name="login_et_hint_clave">Ingrese su contraseña</string>
    <string name="login_btn_login">Login</string>

    <!-- PANTALLA MENÚ PRINCIPAL -->
    <string name="main_tv_bienvenida">Menú Principal</string>
    <string name="main_btn_logout">Cerrar Sesión</string>
    
    <!-- PANTALLA REGISTRAR CLIENTE -->
    <string name="register_tv_nombre_apellido">Nombre y apellido</string>
    <string name="register_tv_dni">DNI / Documento</string>
    <string name="register_tv_numero_telefono">Número de teléfono</string>
    <string name="register_tv_email">Email</string>
    <string name="register_tv_fecha_nacimiento">Fecha de nacimiento</string>
    <string name="register_tv_apto_fisico">¿Tiene apto físico vigente?</string>
    <string name="register_et_hint_nombre_apellido">Ingrese nombre y apellido</string>
    <string name="register_et_hint_dni">Ingrese número de documento</string>
    <string name="register_et_hint_numero_telefono">Ingrese número de teléfono</string>
    <string name="register_et_hint_email">Ingrese email</string>
    <string name="register_et_hint_fecha_nacimiento">DD/MM/YYYY</string>
    <string name="register_btn_registrar">Registrar</string>

    <!-- PANTALLA GESTIONAR -->
    <string name="manage_btn_deudores">Deudores</string>
    <string name="manage_btn_listado">Listado</string>
    <string name="manage_tv_deudores_hoy">Socios con deuda hoy</string>
    <string name="manage_tv_dni">DNI</string>
    <string name="manage_tv_tel">Tel</string>
    <string name="manage_tv_numero_socio">N° socio</string>
    <string name="manage_btn_cobrar">Cobrar</string>
    <string name="manage_tv_deuda">Deuda</string>
    <string name="manage_tv_fecha_nacimiento">Fec. nac</string>
    <string name="manage_btn_carnet">Carnet</string>

    <!-- PANTALLA GENERAR COBRO -->
    <string name="payment_et_hint_buscar_cliente">Buscar cliente por DNI</string>
    <string name="payment_tv_advertencia">Ingrese un DNI para cargar las opciones de cobro</string>
    <string name="payment_tv_nombre">Nombre del cliente</string>
    <string name="payment_tv_estado">Estado</string>
    <string name="payment_btn_medio_pago">Medio de pago</string>
    <string name="payment_btn_actividad">Actividad</string>
    <string name="payment_btn_cantidad_cuotas">Cantidad de cuotas</string>
    <string name="payment_tv_monto">Monto</string>
    <string name="payment_et_hint_valor_pesos">Valor en pesos</string>
    <string name="payment_btn_comprobante">Descargar comprobante</string>
</resources>