<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_login_welcome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:gravity="center"
        android:text="@string/login_tv_bienvenida"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="40"
        android:maxWidth="450dp"
        android:minWidth="300dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_tv_usuario"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/login_et_hint_usuario"
            android:drawableStart="@drawable/person_24px"
            android:drawablePadding="12dp"
            android:inputType="textPersonName"
            android:autofillHints="username" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_tv_clave"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginBottom="32dp"
            android:hint="@string/login_et_hint_clave"
            android:drawableStart="@drawable/lock_open_24px"
            android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <Button
            android:id="@+id/btn_login_submit"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/login_btn_login"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>